--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dim04ka.github.io",
   "dependencies": {
     "@emailjs/browser": "^3.9.0",
     "@emotion/react": "^11.10.5",
@@ -43,7 +44,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +67,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^18.11.8"
+    "@types/node": "^18.11.8",
+    "gh-pages": "^4.0.0"
   }
 }
