--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
+    "@types/react-transition-group": "^4.4.5",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.2",
@@ -30,11 +31,13 @@
     "react-hook-form": "^7.39.1",
     "react-imask": "^6.4.3",
     "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-number-format": "^5.1.1",
     "react-redux": "^8.0.4",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.1",
     "reselect": "^4.1.6",
@@ -68,6 +71,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.8",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "gh-pages": "^4.0.0"
   }
 }
