--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.2",
     "emailjs-com": "^3.2.0",
+    "i18next": "^22.1.4",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
+    "react-i18next": "^12.1.1",
     "react-imask": "^6.4.3",
     "react-lazy-load": "^4.0.1",
     "react-lazy-load-image-component": "^1.5.6",
