--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "build"
   },
   "eslintConfig": {
     "extends": [
