--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.39.1",
     "react-i18next": "^12.1.1",
     "react-imask": "^6.4.3",
